<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">OmniClick</string>
    <string name="oppo_oclick">O-Click</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_device_address">Device address</string>
    <string name="label_state">State</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="menu_scan">Scan</string>
    <string name="start_on_boot_title">Start on boot</string>
    <string name="proximity_alert_title">Proximity alert</string>
    <string name="snap_picture_title">Single click to take picture</string>
    <string name="find_phone_alert_title">Double click to find phone</string>
    <string name="find_phone_alert_tone_title">Ringtone</string>
    <string name="find_phone_alert_tone_none">None</string>
    <string name="find_phone_alert_notification_title">Phone locator alert</string>
    <string name="find_phone_alert_notification_text">Tap to dismiss</string>
    <string name="music_control_title">Music control</string>
    <string name="music_control_summary">Double click to play/pause. Single click to skip to next track</string>
    <string name="category_state_title">Status</string>
    <string name="device_address_title">Device address</string>
    <string name="device_state_title">State</string>
    <string name="category_settings_title">Settings</string>
    <string name="start_alert_title">Call O-Click</string>
    <string name="section_state_title">Device</string>
    <string name="section_settings_title">Settings</string>
    <string name="section_test_title">Test</string>
</resources>
