<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_state_title" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/label_device_address"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/device_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/label_state"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/connection_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/section_settings_title" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/start_on_boot_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <CheckBox
                android:id="@+id/start_on_boot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/proximity_alert_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <CheckBox
                android:id="@+id/proximity_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/snap_picture_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <CheckBox
                android:id="@+id/snap_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/find_phone_alert_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/find_phone_alert_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <CheckBox
                android:id="@+id/find_phone_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/find_phone_alert_ringtone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/find_phone_alert_tone_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/find_phone_alert_ringtone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/music_control_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/music_control_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_control_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/music_control_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/music_control_title"
                android:layout_below="@+id/music_control_title"
                android:layout_toLeftOf="@+id/music_control"
                android:text="@string/music_control_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <CheckBox
                android:id="@+id/music_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/music_control_summary"
                android:layout_alignBottom="@+id/music_control_summary"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_test_title" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/start_alert"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/start_alert_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
